<resources>
    <string name="app_name">latteEc</string>
    <string name="app_sign_up">注册</string>
    <string name="app_sign_in">登录</string>

    <string name="input_name">姓名</string>
    <string name="input_email">邮箱</string>
    <string name="input_confirm_pwd">确认密码</string>
    <string name="input_pwd">密码</string>
    <string name="input_mobile_num">手机号</string>

    <string name="button_sign_up">注册</string>
    <string name="button_sign_in">登录</string>
    <string name="button_shop_cart_settlement">结算</string>

    <string name="edit_index_search">搜索</string>
    <string name="edit_comment">写下评论</string>

    <string name="sign_in_notice">已经注册了？请登录</string>
    <string name="sign_up_notice">还没有账户？现在注册吧</string>
    <string name="weixin_logo">{fa-weixin}</string>

    <string name="icon_msg">{fa-bullhorn}</string>
    <string name="icon_scan">{icon-scan}</string>
    <string name="icon_select_all">{fa-check-circle}</string>
    <string name="icon_ali_pay">{icon-ali-pay}</string>
    <string name="icon_weixin_pay">{fa-weixin}</string>
    <string name="icon_evaluate">{fa-clone}</string>
    <string name="icon_after_market">{fa-comments-o}</string>
    <string name="icon_receive">{fa-truck}</string>
    <string name="icon_pay">{fa-credit-card}</string>

    <string name="index_main">首页</string>
    <string name="index_sort">分类</string>
    <string name="index_discover">发现</string>
    <string name="index_cart">购物车</string>
    <string name="index_cart_empty">清空</string>
    <string name="index_cart_delete">删除</string>
    <string name="index_personal">个人</string>
    <string name="item_more_btn"><![CDATA[more >]]></string>

    <string name="text_cart_title">商品标题</string>
    <string name="text_cart_desc">商品描述</string>
    <string name="text_shop_cart_total">合计:</string>
    <string name="text_shop_cart_all">全选</string>
    <string name="text_gobuy">去购物</string>
    <string name="user_name">十二月青</string>
    <string name="text_my_account">我的订单</string>
    <string name="text_all_account">全部订单</string>
    <string name="text_arrow_value">未设置</string>
    <string name="btn_submission">提交</string>

</resources>
