<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_orange_dark"
        app:contentInsetStart="@dimen/_0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <!-- scrollview下的组件记得默认使用wrap_content -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/_24dp"
            android:paddingTop="@dimen/_56dp"
            android:paddingEnd="@dimen/_24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_24dp"
                android:src="@mipmap/logo_cat" />

            <!-- 手机号码 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_sign_in_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_mobile_num"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 密码 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_sign_in_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pwd"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_24dp"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:padding="@dimen/_12dp"
                android:text="@string/button_sign_in"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_link_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24dp"
                android:gravity="center"
                android:text="@string/sign_up_notice"
                android:textSize="@dimen/_16sp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/txt_weixin_sign_in"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/weixin_logo"
                android:textColor="@color/_04B00f"
                android:textSize="@dimen/_40sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>