<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/APP_BACKGROUND">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 头部 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160dp"
            android:background="@color/APPBG_DARK">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="@dimen/_80dp"
                android:layout_height="@dimen/_80dp"
                android:layout_marginTop="@dimen/_30dp"
                android:src="@mipmap/avatar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:text="@string/user_name"
                android:textColor="@color/APP_WHITE"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 订单模块 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_my_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8dp"
                android:gravity="center"
                android:text="@string/text_my_account"
                android:textColor="@color/APP_BLACK"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_all_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_8dp"
                android:gravity="center"
                android:text="@string/text_all_account"
                android:textColor="@color/TEXT_CART_DARK_GRAY"
                app:layout_constraintEnd_toStartOf="@id/icon_all_account_arrow" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_all_account_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_8dp"
                android:gravity="center"
                android:text="{fa-chevron-right}"
                android:textColor="@color/TEXT_CART_DARK_GRAY"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_pay"
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/llayout_receive"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_pay"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:gravity="center"
                    android:text="@string/icon_pay"
                    android:textSize="@dimen/_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="待付款"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_receive"
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/llayout_evaluate"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/llayout_pay">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_receive"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:gravity="center"
                    android:text="@string/icon_receive"
                    android:textSize="@dimen/_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="待收货"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_evaluate"
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/llayout_after_market"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/llayout_receive">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_evaluate"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:gravity="center"
                    android:text="@string/icon_evaluate"
                    android:textSize="@dimen/_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:text="待评价"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_after_market"
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/llayout_evaluate">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_after_market"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:gravity="center"
                    android:text="@string/icon_after_market"
                    android:textSize="@dimen/_20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="售后"
                    android:textSize="10sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_personal_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20dp">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>

