<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/base_toolbar_text" />

    <!--  列表 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_shop_cart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_toolbar_height"
        app:layout_constraintBottom_toTopOf="@id/txt_pay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="8">

    </androidx.recyclerview.widget.RecyclerView>

    <!-- 无数据页 -->
    <androidx.appcompat.widget.ViewStubCompat
        android:id="@+id/stub_nodata"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_toolbar_height"
        android:layout="@layout/stub_nodata_item"
        app:layout_constraintBottom_toTopOf="@id/txt_pay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="8" />


    <!-- 底部 -->
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/icon_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/_15dp"
        android:paddingEnd="@dimen/_10dp"
        android:text="@string/icon_select_all"
        android:textColor="@color/TEXT_CART_DARK_GRAY"
        android:textSize="@dimen/_20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_pay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_select_all"
        app:layout_constraintTop_toTopOf="@id/txt_pay" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_shop_cart_all"
        android:textColor="@color/APPBG_DARK"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_pay"
        app:layout_constraintLeft_toRightOf="@id/icon_select_all"
        app:layout_constraintRight_toLeftOf="@id/txt_total"
        app:layout_constraintTop_toTopOf="@id/txt_pay" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_total"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:paddingEnd="@dimen/_10dp"
        android:text="@string/text_shop_cart_total"
        android:textColor="@color/TEXT_CART_DARK_GRAY"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_pay"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/txt_select_all"
        app:layout_constraintRight_toLeftOf="@id/txt_price"
        app:layout_constraintTop_toTopOf="@id/txt_pay"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_price"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text=""
        android:textColor="@color/APPBG_DARK"
        android:textSize="@dimen/_20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_pay"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/txt_total"
        app:layout_constraintRight_toLeftOf="@id/txt_pay"
        app:layout_constraintTop_toTopOf="@id/txt_pay"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_pay"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@color/APPBG_DARK"
        android:gravity="center"
        android:text="@string/button_shop_cart_settlement"
        android:textColor="@color/APP_WHITE"
        android:textSize="@dimen/_20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/txt_price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_shop_cart"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>